--- a/apps/twr_node_nranges_tdma/pkg.yml
+++ b/apps/twr_node_nranges_tdma/pkg.yml
@@ -34,13 +34,13 @@ pkg.deps:
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/dw1000"
     - "@mynewt-dw1000-core/lib/twr_ss_nrng"
-#    - "@mynewt-dw1000-core/lib/twr_ds_nrng"
-#    - "@mynewt-dw1000-core/lib/twr_ds_ext_nrng"
+    - "@mynewt-dw1000-core/sys/uwbcfg"   
     - "@mynewt-dw1000-core/lib/dsp"
     - "@mynewt-dw1000-core/lib/tdma"
     - "@mynewt-dw1000-core/lib/ccp"
     - "@mynewt-dw1000-core/lib/wcs"
     - "@mynewt-timescale-lib/lib/timescale"
+    - "@mynewt-dw1000-core/lib/survey"
 
 pkg.cflags:
     - "-std=gnu99"
