--- a/apps/twr_node_nranges_tdma/syscfg.yml
+++ b/apps/twr_node_nranges_tdma/syscfg.yml
@@ -13,9 +13,13 @@ syscfg.vals:
     DEVICE_ID: ((uint16_t)0x2222)
     STATS_NAMES: 1
     STATS_CLI: 1
+    CONFIG_CLI: 1
+    DW1000_CLI: 1
+    SHELL_TASK: 1
     WCS_VERBOSE: 1
+    SURVEY_VERBOSE: 1
     NRNG_VERBOSE: 0
-    TDMA_SANITY_INTERVAL: 10
+    TDMA_SANITY_INTERVAL: 0
 
 syscfg.defs:
     UUID_CCP_MASTER:
