--- a/apps/listener/syscfg.yml
+++ b/apps/listener/syscfg.yml
@@ -18,13 +18,17 @@ syscfg.vals:
     CONSOLE_RTT: 0
     CONSOLE_UART_BAUD: 1000000
     CONSOLE_UART_TX_BUF_SIZE: 1024
+    CONSOLE_UART_RX_BUF_SIZE: 256
     
     # Shell
     SHELL_TASK: 1
     SHELL_PROMPT_MODULE: 1
+    SHELL_NEWTMGR: 1
     CONFIG_CLI: 1
     CONFIG_CLI_DEBUG: 1
     DW1000_CLI: 1
+    STATS_NAMES: 1
+    STATS_CLI: 1
     
     # Enable DW1000
     DW1000_DEVICE_0: 1
@@ -34,8 +38,8 @@ syscfg.vals:
     UWBCFG_APPLY_AT_INIT: 1
     CIR_ENABLED: 1
     CIR_VERBOSE: 0
-    CIR_OFFSET: 3
-    CIR_SIZE: 12
+    CIR_OFFSET: 1
+    CIR_SIZE: 3
 
     ## Where to store config 
     CONFIG_FCB: 1
