--- a/apps/listener/syscfg.yml
+++ b/apps/listener/syscfg.yml
@@ -14,8 +14,9 @@ syscfg.defs:
         
 syscfg.vals:
     # Route console to UART
-    CONSOLE_UART: 1
     CONSOLE_RTT: 0
+    CONSOLE_UART: 1
+    #CONSOLE_UART_BAUD: 460800  # Max baudrate if using ACM through jlink (/dev/ttyACMx)
     CONSOLE_UART_BAUD: 1000000
     CONSOLE_UART_TX_BUF_SIZE: 1024
     CONSOLE_UART_RX_BUF_SIZE: 256
